[metadata]
author = Dwight Hubbard
author_email = dhubbard@ouroath.com
description-file = README.rst
name = serviceping
url = https://github.com/yahoo/serviceping
# Version is YY.MM.SERIAL
version = 18.8.0

[options]
packages =
    serviceping

setup_requires =
    pip>=9.0.1
    setuptools>=32.0.0

[options.entry_points]
console_scripts =
    serviceping=serviceping.cli:main
