[metadata]
author = Dwight Hubbard
author_email = dhubbard@ouroath.com
classifiers =
    License :: OSI Approved :: Apache Software License
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: BSD :: FreeBSD
    Operating System :: POSIX :: Linux
    Operating System :: POSIX :: SunOS/Solaris
    Operating System :: POSIX
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Topic :: System :: Systems Administration
    Topic :: Utilities
license = Apache
long_description = file: README.rst
name = serviceping
url = https://github.com/yahoo/serviceping

# Version is YY.MM.SERIAL
version = 18.8.1

[options]
packages =
    serviceping

python_requires = >=3.6

setup_requires =
    pip>=9.0.1
    setuptools>=32.0.0

[options.entry_points]
console_scripts =
    serviceping=serviceping.cli:main
