[metadata]
author = Dwight Hubbard
author_email = dhubbard@ouroath.com
classifiers = 
	License :: OSI Approved :: Apache Software License
	Development Status :: 4 - Beta
	Environment :: Console
	Intended Audience :: Developers
	Operating System :: MacOS :: MacOS X
	Operating System :: POSIX :: BSD :: FreeBSD
	Operating System :: POSIX :: Linux
	Operating System :: POSIX :: SunOS/Solaris
	Operating System :: POSIX
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: Implementation :: CPython
	Topic :: System :: Systems Administration
	Topic :: Utilities
description = A command line utility that provides a ping like interface for checking tcp/ssl ports and services
keywords = ping, network-analysis, troubleshooting, networking
license = Apache
long_description = file:README.md
long_description_content_type = text/markdown
name = serviceping
project_urls = 
	CI Pipeline = https://cd.screwdriver.cd/pipelines/2881
	Documentation = https://yahoo.github.io/serviceping/
	Source = https://github.com/yahoo/serviceping
url = https://github.com/yahoo/serviceping
version = 19.11.161871

[options]
packages = 
	serviceping
python_requires = >=3.6

[options.entry_points]
console_scripts = 
	serviceping=serviceping.cli:main

[options.extras_require]
doc_build = 
	markdown-include
	mkdocs-material
	pygments
	pymdown-extensions
	recommonmark

[screwdrivercd.version]
version_type = sdv4_date

